src/test/deca/syntax/invalid/personal/illegal_comment.deca
// Description:
//    tests de programme incorrect syntax (mais pas lexicalement) (commentaire)
//
// Resultats:
//    ligne 10 : Erreur, mais pas ici */ ne doit pas etre inclue dans le commentaire
//
// Historique:
//    cree le 17/12/2024

/*c'est un commentaire*/ mais non */
